# eeroVista

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODO.md  TODOS.md  analyze_query.py  cli_auth.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  profile_hourly.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_caching.py  test_caching_accuracy.py  test_compound_index.sql  test_data_usage.py
.github/: SETUP.md
config/: dnsmasq.conf  supervisord.conf
docs/: _config.yml  api-reference.md  configuration.md  development.md  getting-started.md  index.md  mcp.md  mqtt-homeassistant.md  prometheus.md  reverse-proxy.md  zabbix.md
src/: __init__.py  config.py  main.py
templates/: README.md  zabbix_template_eerovista.xml  zabbix_template_eerovista_autodiscovery.xml  zabbix_template_eerovista_complete.xml  zabbix_template_eerovista_device.xml  zabbix_template_eerovista_node.xml
tests/: README.md  __init__.py  test_activity_pattern.py  test_bandwidth_accumulation.py  test_bandwidth_api.py  test_bandwidth_reports.py  test_cleanup.py  test_collector_base.py  test_collector_device.py  test_collector_network.py  test_collector_speedtest.py  test_database_utils.py  test_device_groups.py  test_device_groups_api.py  test_devices.py  test_dns_service.py  test_eero_auth.py  test_eero_client.py  test_eero_patch.py  test_encryption.py  test_example.py  test_health_analytics.py  test_health_routes.py  test_health_score.py  test_isp_reliability.py  test_load_analysis.py  test_mcp_server.py  test_mqtt.py  (+11 more)
(+77 files in other folders)
